fix(cta34): fix subtitle centering when no media and center alignment

--- a/editor-components/call_to_action/call_to_action34/call_to_action34.module.scss
+++ b/editor-components/call_to_action/call_to_action34/call_to_action34.module.scss
@@ -65,6 +65,26 @@
                         }
                     }
                 }
+
+                &.no-media[data-alignment="center"] {
+                    .left-column {
+                        align-items: center;
+
+                        .title,
+                        .subtitle,
+                        .description {
+                            text-align: center;
+                            align-self: center;
+                            margin-left: auto;
+                            margin-right: auto;
+                        }
+
+                        .button-container {
+                            justify-content: center;
+                            align-self: center;
+                        }
+                    }
+                }
             }
 
             .left-column {
@@ -137,12 +157,14 @@
             &.no-media[data-alignment="center"] {
                 .left-column {
                     align-items: center;
-                    
+
                     .title,
                     .subtitle,
                     .description {
                         text-align: center;
                         align-self: center;
+                        margin-left: auto;
+                        margin-right: auto;
                     }
 
                     .button-container {
